@startuml classes-selectmode

!include style.plantuml

' Interfaces

interface SelectModeWireframeProtocol <<Wireframe>> {
    navigationController : UINavigationController?
    {static} createSelectModeModule() -> UIViewController
    presentMarbleRunListView(from: SelectModeViewProtocol, with: ARInteractionMode)
}

interface SelectModeViewProtocol <<View>> {
    presenter : SelectModePresenterProtocol? 
}

interface SelectModePresenterProtocol <<Presenter>> {
    view : SelectModeViewProtocol? 
    wireframe : SelectModeWireframeProtocol? 
    didPressGuideButton(on: SelectModeViewProtocol)
    didPressEditorButton(on: SelectModeViewProtocol)
}

' Classes

class SelectModeWireframe <<Wireframe>> {
    {static} mainStoryboard: UIStoryboard
}
class SelectModeView <<View>> {
    editorButtonPressed(_: UIButton)
    guideButtonPressed(_: UIButton)
}
class SelectModePresenter <<Presenter>>

' Relationships

SelectModeViewProtocol --> SelectModePresenterProtocol
SelectModePresenterProtocol -l> SelectModeViewProtocol
SelectModeWireframeProtocol <--u- SelectModePresenterProtocol

' Implementations

SelectModeWireframe .u.|> SelectModeWireframeProtocol
SelectModeView .u.|> SelectModeViewProtocol
SelectModePresenter .u.|> SelectModePresenterProtocol

@enduml
